@@ -1,8 +1,10 @@
-# Automatically generated by php-weathermap v0.96test1
+# Automatically generated by php-weathermap v0.96test2
 
 FONTDEFINE 100 docs/example/Vera.ttf 10
 
-BACKGROUND images/background1_950x625_197.jpg
+BACKGROUND images/bw_gradient_1024.png
+WIDTH 950
+HEIGHT 625
 HTMLSTYLE overlib
 KEYFONT 100
 TIMEPOS 746 17 Created: %b %d %Y %H:%M:%S
@@ -22,6 +24,9 @@ SCALE DEFAULT 55 70   240 240 0
 SCALE DEFAULT 70 85   255 192 0  
 SCALE DEFAULT 85 100   255 0 0  
 
+SCALE errors 0 0   none  
+SCALE errors 0 100   255 0 0  
+
 SET nowarn_clipping 1
 
 # End of global section
@@ -37,6 +42,7 @@ NODE DEFAULT
 LINK DEFAULT
 	WIDTH 5
 	BWFONT 100
+	COMMENTFONT 100
 	BWLABEL bits
 	BANDWIDTH 1M
 
@@ -50,11 +56,11 @@ NODE node1
 
 NODE node2
 	LABEL Node 2
-	POSITION 347 235
+	POSITION 360 240
 
 NODE node
 	LABEL NODE 3
-	POSITION 422 544
+	POSITION 360 560
 
 
 # regular LINKs:
@@ -65,6 +71,13 @@ LINK node1-node2
 LINK node2-node
 	NODES node2 node
 	BANDWIDTH 2M
+
+LINK node2-node-errors
+	TEMPLATE node2-node
+	WIDTH 7
+	ZORDER 290
+	TARGET static:0:0
+	NODES node2 node
 
 
 
