@@ -27,8 +27,10 @@
 ./images/bw_gradient_1024.png
 ./images/filecabinet.png
 ./images/hollow32.png
-./images/tab_weathermap_red.png
-./images/tab_weathermap.png
+./images/tab_weathermap_red.gif
+./images/tab_weathermap.gif
+./images/s_tab_weathermap_red.gif
+./images/s_tab_weathermap.gif
 ./images/uk1024.png
 ./images/updown_0.png
 ./images/updown_1.png
