@@ -27,6 +27,8 @@
         ADDED - "COMMENTSTYLE center" to make comments run along the centre of a link arrow. (and 'edge' for the usual)
         ADDED - COMMENTFONTCOLOR accepts 'contrast' as an option, for when it's over a link
         ADDED - VIASTYLE angled (or curved) - you can turn sharp corners now
+        ADDED - Comment (and pos) editing in editor (based on code by Zdolny)
+        ADDED - Editor Settings dialog works, and allows you to set grid-snap and some overlays
 	CHANGE - Cacti plugin uses "processed" map title now (allows {} tokens in the title)
 	CHANGE - A NODE with no POSITION is not drawn, instead of drawn at 0,0. Useful for templates.
 	CHANGE - A LINK with no NODES is no longer an error. Also for templates.
